--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,6 @@
+html {
+  font-family: 'Open Sans', sans-serif;
+}
 .topBox {
   widows: 100%;
   height: 600px;
@@ -7,10 +10,10 @@
   justify-content: center;
   align-items: center;
 }
-.chapterName {
+p.chapterName {
   font-size: 80px;
-}
-.navBarHome {
+  position: relative;
+    bottom: 60px;
 }
 .NSA {
   font-weight: bolder;
@@ -24,11 +27,55 @@
 ul.imageList {
   margin: 0;
 }
+.homeParentBox {
+  position: relative;
+}
 .footerImages {
-  background-color: #C5C2CF;
+  width: 100%;
+  /*background-color: #C5C2CF;*/
+  margin-top: -160px;
 }
 .membersBox {
   background-color: rgb(255,255,255,.5);
   border: 1px solid black;
   text-align: center;
+}
+li.homeImages {
+  display: table;
+}
+.gallery-text {
+  font-size: 25px;
+}
+ul.imageList {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+.homeImages {
+  cursor:pointer;
+  position: relative;
+  display: block;
+}
+.gallery-text {
+  position: absolute;
+  top: 0; right: 0;
+  bottom: 0; left: 0;
+  text-align: center;
+  background-color: rgba(138,120,140,0.8);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+  vertical-align: middle;
+  line-height: 320px;
+}
+.gallery-text:hover{
+  opacity: 1;
+}
+.gallery-text h3{
+  color: white;
+  display: inline-table;
+  vertical-align:middle;
+  line-height:100%;
 }
