--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,13 +2,14 @@ html {
   font-family: 'Open Sans', sans-serif;
 }
 .topBox {
-  widows: 100%;
+  width: 100%;
   height: 600px;
-  background-color: #4b186e;
-  color: #e88a1c;
+  background-color: #e88a1c;
+  color: #4b186e;
   display: flex;
   justify-content: center;
   align-items: center;
+  /*z-index: 1;*/
 }
 p.chapterName {
   font-size: 80px;
@@ -78,4 +79,16 @@ ul.imageList {
   display: inline-table;
   vertical-align:middle;
   line-height:100%;
+}
+
+@media only screen and (max-width: 1100px) {
+  .imageList {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+
+
+  }
+
+
 }
