--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -34,7 +34,7 @@
   position: fixed;
   width: 100%;
   height: 50px;
-  background-color: rgb(62,20,91);
+  background-color: #4b186e;
   z-index: 6;
 }
 .navControl {
