--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -95,9 +95,9 @@ li.navItems:hover {
   -webkit-touch-callout: none;
 }
 
-/*
- * Just a quick hamburger
- */
+
+ /*hamburger menu*/
+
 #menuToggle span {
   display: block;
   width: 33px;
@@ -121,36 +121,26 @@ li.navItems:hover {
   transform-origin: 0% 100%;
 }
 
-/*
- * Transform all the slices of hamburger
- * into a crossmark.
- */
+
+ /*Transform all the slices of hamburger
+ into a crossmark.*/
+
 #menuToggle input:checked ~ span {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
   background: #232323;
 }
 
-/*
- * But let's hide the middle one.
- */
 #menuToggle input:checked ~ span:nth-last-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
- * Ohyeah and the last one should go the other direction
- */
 #menuToggle input:checked ~ span:nth-last-child(2) {
   opacity: 1;
   transform: rotate(-45deg) translate(0, -1px);
 }
 
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
 .navMenu {
   position: absolute;
   border-radius: 5px;
@@ -159,12 +149,10 @@ li.navItems:hover {
   padding: 40px;
   padding-top: 100px;
   right: -100px;
-  /*background-color: #8A788C;*/
   background: rgba(138,120,140, 0.7);
   z-index: 4;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
   transform-origin: 0% 0%;
   transform: translate(100%, 0);
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
@@ -175,9 +163,9 @@ li.navItems {
   font-size: 20px;
 }
 
-/*
- * And let's fade it in from the left
- */
+
+ /*fade it in from the left*/
+
 #menuToggle input:checked ~ ul {
   transform: scale(1.0, 1.0);
   opacity: 1;
